Contain the read-more screen-reader text to a fixed size, so that it doesn’t invisibly break out of the screen (causing a mystery scroll)

--- a/sassy_s/_global.scss
+++ b/sassy_s/_global.scss
@@ -51,6 +51,12 @@
 	&:after {
 		content: '\20\2022\20\2022\20\2022';
 	}
+
+	.screen-reader-text {
+		overflow: hidden;
+		height: 1px;
+		width: 1px;
+	}
 }
 
 @media screen and (max-width: 450px) {
